--- a/styles.css
+++ b/styles.css
@@ -148,11 +148,11 @@ header p {
 .energy-bar {
     position: relative;
     height: 300px;
-    background: #1a1a1a;
-    border-radius: 15px;
+    background: #000000;
+    /* border-radius: 15px; */
     overflow: hidden;
     margin-bottom: 15px;
-    border: 3px solid #404040;
+    /* border: 3px solid #404040; */
     transform: rotate(180deg); /* Girar 180° para crescer de baixo para cima */
 }
 
